tree-sitter-neon/test/corpus/declarations.txt
================================================================================
Val declaration with initialization
================================================================================

val x = 5

--------------------------------------------------------------------------------

(source_file
  (declaration
    (val_declaration
      name: (identifier)
      value: (expression (primary_expression (number))))))

================================================================================
Var declaration without initialization
================================================================================

var y

--------------------------------------------------------------------------------

(source_file
  (declaration
    (var_declaration
      name: (identifier))))

================================================================================
Function declaration
================================================================================

fn add(a, b) {
  return a + b
}

--------------------------------------------------------------------------------

(source_file
  (declaration
    (function_declaration
      name: (identifier)
      parameters: (parameter_list (identifier) (identifier))
      body: (block
        (declaration
          (statement
            (return_statement
              (expression
                (binary_expression
                  left: (expression (primary_expression (identifier)))
                  right: (expression (primary_expression (identifier))))))))))))

================================================================================
Struct declaration
================================================================================

struct Point { x y }

--------------------------------------------------------------------------------

(source_file
  (declaration
    (struct_declaration
      name: (identifier)
      (identifier)
      (identifier))))
