tree-sitter-neon/test/corpus/expressions.txt
================================================================================
Binary expression with precedence
================================================================================

val x = 1 + 2 * 3

--------------------------------------------------------------------------------

(source_file
  (declaration
    (val_declaration
      name: (identifier)
      value: (expression
        (binary_expression
          left: (expression (primary_expression (number)))
          right: (expression
            (binary_expression
              left: (expression (primary_expression (number)))
              right: (expression (primary_expression (number))))))))))

================================================================================
Method call
================================================================================

arr.push(5)

--------------------------------------------------------------------------------

(source_file
  (declaration
    (statement
      (expression_statement
        (expression
          (call_expression
            function: (expression
              (field_expression
                object: (expression (primary_expression (identifier)))
                field: (identifier)))
            arguments: (argument_list
              (expression (primary_expression (number))))))))))

================================================================================
Range expression
================================================================================

val r = 1..10

--------------------------------------------------------------------------------

(source_file
  (declaration
    (val_declaration
      name: (identifier)
      value: (expression
        (range_expression
          start: (expression (primary_expression (number)))
          end: (expression (primary_expression (number))))))))
